@@ -119,6 +119,22 @@ class ZMRuntime extends ZMObject {
         return round($executionTime, 4);
     }
 
+    /**
+     * Load mappings from a YAML style string.
+     *
+     * @param string yaml The yaml style mappings.
+     * @param array defaults Optional defaults for merging; default is an empty array.
+     * @param boolean override Optional flag to control whether to override existing mappings or to merge;
+     *  default is <code>true</code> to override.
+     */
+    public function yamlLoad($yaml, $defaults=array(), $override=true) {
+        if ($override) {
+            return Spyc::YAMLLoadString($yaml);
+        } else {
+            return array_merge_recursive($defaults, Spyc::YAMLLoadString($yaml));
+        }
+    }
+
 }
 
 ?>
