@@ -1,0 +1,73 @@
+#
+# ZenMagick cart default SACS mappings
+#
+# $Id$
+#
+#
+account: 
+  level: registered
+  secure: true
+account_edit: 
+  level: registered
+  secure: true
+account_history: 
+  level: registered
+  secure: true
+account_history_info: 
+  level: registered
+  secure: true
+account_newsletters: 
+  level: registered
+  secure: true
+account_notifications: 
+  level: registered
+  secure: true
+account_password: 
+  level: registered
+  secure: true
+address_book: 
+  level: registered
+  secure: true
+address_book_process: 
+  level: registered
+  secure: true
+checkout_process: 
+  level: guest
+  secure: true
+checkout_confirmation: 
+  level: guest
+  secure: true
+checkout_payment: 
+  level: guest
+  secure: true
+checkout_payment_address: 
+  level: guest
+  secure: true
+checkout_shipping: 
+  level: guest
+  secure: true
+checkout_shipping_address: 
+  level: guest
+  secure: true
+gv_redeem: 
+  level: registered
+  secure: true
+gv_send: 
+  level: registered
+  secure: true
+gv_send_confirm: 
+  level: registered
+  secure: true
+product_reviews_write: 
+  level: registered
+  secure: true
+login: 
+  level: anonymous
+  secure: true
+create_account: 
+  level: anonymous
+  secure: true
+tell_a_friend: 
+  level: registered
+  secure: true
+
